# autofilm-webui

./: .gitignore  BUG_FIX_REPORT.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  README.md  WEBUI_TASK_COMPLETION_REPORT.md  debug_route.py  docker-compose.yml  fix_static_files.py  patch_main.py  rewrite_main_ending.py  test_static_dir.py
.github/workflows/: docker-publish.yml
config/: config.example.yaml
src/: app_info.rs  args.rs  config.rs  library_poster.rs  main.rs
src/library_poster/: config.rs  renderer.rs  runner.rs
src/library_poster/renderer/: blur.rs  card.rs  collage.rs  split.rs  utils.rs
src/media_server/: config.rs
webui/: Dockerfile  build.sh
webui/backend/: main.py  requirements.txt
webui/frontend/: index.html  package-lock.json  package.json  vite.config.js
webui/frontend/src/: App.vue  router.js
webui/frontend/src/api/: index.js
webui/frontend/src/components/: AlistDirectoryPicker.vue
webui/frontend/src/views/: Alist2StrmTasks.vue  AlistManager.vue  Ani2AlistTasks.vue  Dashboard.vue  LibraryPosterTasks.vue  LogViewer.vue  MediaServers.vue
