[package]
name = "autofilm"
version = "2.0.0"
edition = "2024"
authors = ["AkimioJR"]
repository = "https://github.com/AkimioJR/AutoFilm"
description = "一个为Emby、Jellyfin提供生成strm、动漫追番、绘制媒体库海报的小工具"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
alist = { package = "alist-client-rs", path = "alist-client-rs" }
ab_glyph = "0.2.32"
base64 = "0.22.1"
chrono = "0.4.45"
chrono-tz = "0.10"
futures-util = "0.3.32"
iana-time-zone = "0.1"
image = { version = "0.25.8", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "webp",
] }
imageproc = "0.27.0"
rand = "0.10.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "json",
    "query",
    "rustls",
    "stream",
] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"

[build-dependencies]
chrono = "0.4.45"
